<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="camera_settings"
        android:title="@string/settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="disable_shutter_sound"
            android:summary="@string/settings_sound_fx_summary"
            android:title="@string/settings_sound_fx" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="disable_preview_animation"
            android:summary="@string/settings_preview_animation_summary"
            android:title="@string/settings_preview_animation" />
        
        <Preference
            android:key="get_lightbox"
            android:summary="@string/settings_get_lightbox_summary"
            android:title="@string/settings_get_lightbox" />
    </PreferenceCategory>

</PreferenceScreen>