<?xml version="1.0" encoding="utf-8"?>

<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/com.lightbox.android.camera" >
    <PreferenceGroup
            camera:title="@string/pref_camera_settings_category">                
        <ListPreference
                camera:key="pref_camera_focusmode_key"
                camera:defaultValue="@string/pref_camera_focusmode_default"
                camera:title="@string/pref_camera_focusmode_title"
                camera:entries="@array/pref_camera_focusmode_entries"
                camera:entryValues="@array/pref_camera_focusmode_entryvalues" />                
        <ListPreference
                camera:key="pref_camera_exposure_key"
                camera:defaultValue="@string/pref_exposure_default"
                camera:title="@string/pref_exposure_title" />
        <ListPreference
                camera:key="pref_camera_scenemode_key"
                camera:defaultValue="@string/pref_camera_scenemode_default"
                camera:title="@string/pref_camera_scenemode_title"
                camera:entries="@array/pref_camera_scenemode_entries"
                camera:entryValues="@array/pref_camera_scenemode_entryvalues" />
         <IconListPreference
                camera:key="pref_camera_whitebalance_key"
                camera:defaultValue="@string/pref_camera_whitebalance_default"
                camera:title="@string/pref_camera_whitebalance_title"
                camera:icons="@array/pref_camera_whitebalance_icons"
                camera:largeIcons="@array/whitebalance_icons"
                camera:entries="@array/pref_camera_whitebalance_entries"
                camera:entryValues="@array/pref_camera_whitebalance_entryvalues" />
    </PreferenceGroup>
</PreferenceGroup>
